--- a/crypto/md4/Makefile
+++ b/crypto/md4/Makefile
@@ -72,7 +72,7 @@ dclean:
 	rm -f ../../include/openssl/$(EXHEADER) ../../test/$(TEST) ../../apps/$(APPS)
 
 clean:
-	rm -f asm/mx86unix.cpp *.o asm/*.o *.obj lib tags core .pure .nfs* *.old *.bak fluff
+	rm -f asm/mx86unix.cpp *.o *.d asm/*.o *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
 
 include $(TOP)/common.mk
