--- a/fips/aes/Makefile
+++ b/fips/aes/Makefile
@@ -81,7 +81,7 @@ dclean:
 	mv -f Makefile.new $(MAKEFILE)
 
 clean:
-	rm -f *.o asm/*.o *.obj lib tags core .pure .nfs* *.old *.bak fluff testlist
+	rm -f *.o *.d asm/*.o *.obj lib tags core .pure .nfs* *.old *.bak fluff testlist
 
 include $(TOP)/common.mk
 -include $(patsubst %.c,%.d,$(SRC))
