--- a/fips/hmac/Makefile
+++ b/fips/hmac/Makefile
@@ -79,7 +79,7 @@ dclean:
 	mv -f Makefile.new $(MAKEFILE)
 
 clean:
-	rm -f *.o *.obj lib tags core .pure .nfs* *.old *.bak fluff
+	rm -f *.o *.d *.obj lib tags core .pure .nfs* *.old *.bak fluff
 
 include $(TOP)/common.mk
 -include $(patsubst %.c,%.d,$(SRC))
