--- a/Makefile.fips
+++ b/Makefile.fips
@@ -106,6 +106,7 @@ HEADER=         e_os.h
 all: Makefile build_all openssl.pc libssl.pc libcrypto.pc
 
 include configure.mk
+include build.mk
 
 # as we stick to -e, CLEARENV ensures that local variables in lower
 # Makefiles remain local and variable. $${VAR+VAR} is tribute to Korn
