Update Makefiles to include configure.mk

--- a/demos/engines/cluster_labs/Makefile
+++ b/demos/engines/cluster_labs/Makefile
@@ -4,6 +4,7 @@ OBJ=		hw_cluster_labs.o
 HEADER=		hw_cluster_labs.h
 
 TOP= ../../..
+include $(TOP)/configure.mk
 include $(TOP)/common.mk
 include build.mk
 
