Include configure.mk in Makefile.shared

--- a/Makefile.shared
+++ b/Makefile.shared
@@ -66,6 +66,8 @@ LIBCOMPATVERSIONS=
 # dependencies to other libraries.
 LIBDEPS=
 
+include $(TOP)/configure.mk
+
 #------------------------------------------------------------------------------
 # The rest is private to this makefile.
 
