Fix tools include path
Noticed this while working on an automated Makefile refactoring.

Signed-off-by: Mike Bland <mbland@acm.org>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -5,7 +5,7 @@
 DIR_tools=	tools
 TOP_tools=	..
 include $(TOP_tools)/configure.mk
-INCLUDES_tools= -I$(TOP_tools) -I../../include
+INCLUDES_tools= -I$(TOP_tools) -I../include
 
 CFLAGS_tools= $(INCLUDES_tools) $(CFLAG)
 
