--- a/Makefile.fips
+++ b/Makefile.fips
@@ -168,7 +168,7 @@ build_crypto:
 		ARX='${AR}' ; \
 	fi ; export ARX ; \
 	if [ $(FIPSCANISTERINTERNAL) = "y" ]; then \
-		AS='$(PERL) $${TOP}/util/fipsas.pl $${TOP} $${<} $(CC)' ; \
+		AS='FIPSCANISTERINTERNAL="$(FIPSCANISTERINTERNAL)" $(PERL) $${TOP}/util/fipsas.pl $${TOP} $${<} $(CC)' ; \
 	else \
 		AS='$(CC) -c' ; \
 	fi ; export AS ; \
