Add implicit rules to GNUmakefiles
Trying to replicate this in BSD syntax appears to be a nonstarter. That, or it
would require an update to the Makefiles to explicitly include all .s and .S
files in particular. That might not be a bad idea, but going to punt for now,
since GNU seems to do the right thing more easily.

This was automatically applied by AddDefaultRules() and
TransformDefaultRuleToGnu() in:
https://code.google.com/p/mike-bland/source/browse/openssl/update_makefiles.py

--- a/crypto/bf/GNUmakefile
+++ b/crypto/bf/GNUmakefile
@@ -4,3 +4,8 @@
 
 include crypto/bf/Makefile
 -include $(SRC_crypto_bf:.c=.d)
+
+crypto/bf/%.o: crypto/bf/%.c
+	$(CC) $(CFLAGS_crypto_bf) $(CPPFLAGS) -c -o $@ $<
+crypto/bf/%.s: crypto/bf/%.S
+	$(CPP_crypto_bf) $(CPPFLAGS) -o $@ $<
