--- a/crypto/des/GNUmakefile
+++ b/crypto/des/GNUmakefile
@@ -4,3 +4,8 @@
 
 include crypto/des/Makefile
 -include $(SRC_crypto_des:.c=.d)
+
+crypto/des/%.o: crypto/des/%.c
+	$(CC) $(CFLAGS_crypto_des) $(CPPFLAGS) -c -o $@ $<
+crypto/des/%.s: crypto/des/%.S
+	$(CPP_crypto_des) $(CPPFLAGS) -o $@ $<
