--- a/crypto/modes/GNUmakefile
+++ b/crypto/modes/GNUmakefile
@@ -4,3 +4,6 @@
 
 include crypto/modes/Makefile
 -include $(SRC_crypto_modes:.c=.d)
+
+crypto/modes/%.o: crypto/modes/%.c
+	$(CC) $(CFLAGS_crypto_modes) $(CPPFLAGS) -c -o $@ $<
