--- a/fips/aes/GNUmakefile
+++ b/fips/aes/GNUmakefile
@@ -4,3 +4,6 @@
 
 include fips/aes/Makefile
 -include $(SRC_fips_aes:.c=.d)
+
+fips/aes/%.o: fips/aes/%.c
+	$(CC) $(CFLAGS_fips_aes) $(CPPFLAGS) -c -o $@ $<
