--- a/fips/des/GNUmakefile
+++ b/fips/des/GNUmakefile
@@ -4,3 +4,6 @@
 
 include fips/des/Makefile
 -include $(SRC_fips_des:.c=.d)
+
+fips/des/%.o: fips/des/%.c
+	$(CC) $(CFLAGS_fips_des) $(CPPFLAGS) -c -o $@ $<
