--- a/crypto/GNUmakefile
+++ b/crypto/GNUmakefile
@@ -48,3 +48,6 @@ $(foreach dir, $(SDIRS), \
   $(eval $(call CRYPTO_SUBDIR_RULE_template,$(dir),clean,clean)))
 $(foreach dir, $(SDIRS), \
   $(eval $(call CRYPTO_SUBDIR_RULE_template,$(dir),dclean,dclean)))
+
+crypto/%.o: crypto/%.c
+	$(CC) $(CFLAGS_crypto) $(CPPFLAGS) -c -o $@ $<
