--- a/crypto/aes/GNUmakefile
+++ b/crypto/aes/GNUmakefile
@@ -4,3 +4,8 @@
 
 include crypto/aes/Makefile
 -include $(SRC_crypto_aes:.c=.d)
+
+crypto/aes/%.o: crypto/aes/%.c
+	$(CC) $(CFLAGS_crypto_aes) $(CPPFLAGS) -c -o $@ $<
+crypto/aes/%.s: crypto/aes/%.S
+	$(CPP_crypto_aes) $(CPPFLAGS) -o $@ $<
