--- a/crypto/cast/GNUmakefile
+++ b/crypto/cast/GNUmakefile
@@ -4,3 +4,8 @@
 
 include crypto/cast/Makefile
 -include $(SRC_crypto_cast:.c=.d)
+
+crypto/cast/%.o: crypto/cast/%.c
+	$(CC) $(CFLAGS_crypto_cast) $(CPPFLAGS) -c -o $@ $<
+crypto/cast/%.s: crypto/cast/%.S
+	$(CPP_crypto_cast) $(CPPFLAGS) -o $@ $<
