--- a/crypto/ec/GNUmakefile
+++ b/crypto/ec/GNUmakefile
@@ -4,3 +4,6 @@
 
 include crypto/ec/Makefile
 -include $(SRC_crypto_ec:.c=.d)
+
+crypto/ec/%.o: crypto/ec/%.c
+	$(CC) $(CFLAGS_crypto_ec) $(CPPFLAGS) -c -o $@ $<
