--- a/crypto/rc4/GNUmakefile
+++ b/crypto/rc4/GNUmakefile
@@ -4,3 +4,8 @@
 
 include crypto/rc4/Makefile
 -include $(SRC_crypto_rc4:.c=.d)
+
+crypto/rc4/%.o: crypto/rc4/%.c
+	$(CC) $(CFLAGS_crypto_rc4) $(CPPFLAGS) -c -o $@ $<
+crypto/rc4/%.s: crypto/rc4/%.S
+	$(CPP_crypto_rc4) $(CPPFLAGS) -o $@ $<
