--- a/crypto/sha/GNUmakefile
+++ b/crypto/sha/GNUmakefile
@@ -4,3 +4,8 @@
 
 include crypto/sha/Makefile
 -include $(SRC_crypto_sha:.c=.d)
+
+crypto/sha/%.o: crypto/sha/%.c
+	$(CC) $(CFLAGS_crypto_sha) $(CPPFLAGS) -c -o $@ $<
+crypto/sha/%.s: crypto/sha/%.S
+	$(CPP_crypto_sha) $(CPPFLAGS) -o $@ $<
