--- a/crypto/aes/Makefile
+++ b/crypto/aes/Makefile
@@ -125,7 +125,7 @@ dclean_crypto_aes:
 
 clean: clean_crypto_aes
 clean_crypto_aes:
-	rm -f crypto/aes/*.s crypto/aes/*.o crypto/aes/*.d crypto/aes/*.obj crypto/aes/lib tags crypto/aes/core crypto/aes/.pure crypto/aes/.nfs* crypto/aes/*.old crypto/aes/*.bak crypto/aes/fluff
+	rm -f crypto/aes/*.s crypto/aes/*.o crypto/aes/*.d crypto/aes/*.obj crypto/aes/lib crypto/aes/tags crypto/aes/core crypto/aes/.pure crypto/aes/.nfs* crypto/aes/*.old crypto/aes/*.bak crypto/aes/fluff
 
 .S.s:
 	$(CPP_crypto_aes) $(CPPFLAGS) -o $@ $<
