--- a/crypto/cms/Makefile
+++ b/crypto/cms/Makefile
@@ -72,7 +72,7 @@ dclean_crypto_cms:
 
 clean: clean_crypto_cms
 clean_crypto_cms:
-	rm -f crypto/cms/*.o crypto/cms/*.d crypto/cms/*.obj crypto/cms/lib tags crypto/cms/core crypto/cms/.pure crypto/cms/.nfs* crypto/cms/*.old crypto/cms/*.bak crypto/cms/fluff
+	rm -f crypto/cms/*.o crypto/cms/*.d crypto/cms/*.obj crypto/cms/lib crypto/cms/tags crypto/cms/core crypto/cms/.pure crypto/cms/.nfs* crypto/cms/*.old crypto/cms/*.bak crypto/cms/fluff
 
 .c.o:
 	$(CC) $(CFLAGS_crypto_cms) $(CPPFLAGS) -c -o $@ $<
