--- a/crypto/err/Makefile
+++ b/crypto/err/Makefile
@@ -65,7 +65,7 @@ dclean_crypto_err:
 
 clean: clean_crypto_err
 clean_crypto_err:
-	rm -f crypto/err/*.o crypto/err/*.d crypto/err/*.obj crypto/err/lib tags crypto/err/core crypto/err/.pure crypto/err/.nfs* crypto/err/*.old crypto/err/*.bak crypto/err/fluff
+	rm -f crypto/err/*.o crypto/err/*.d crypto/err/*.obj crypto/err/lib crypto/err/tags crypto/err/core crypto/err/.pure crypto/err/.nfs* crypto/err/*.old crypto/err/*.bak crypto/err/fluff
 
 .c.o:
 	$(CC) $(CFLAGS_crypto_err) $(CPPFLAGS) -c -o $@ $<
