--- a/crypto/idea/Makefile
+++ b/crypto/idea/Makefile
@@ -65,7 +65,7 @@ dclean_crypto_idea:
 
 clean: clean_crypto_idea
 clean_crypto_idea:
-	rm -f crypto/idea/*.o crypto/idea/*.d crypto/idea/*.obj crypto/idea/lib tags crypto/idea/core crypto/idea/.pure crypto/idea/.nfs* crypto/idea/*.old crypto/idea/*.bak crypto/idea/fluff
+	rm -f crypto/idea/*.o crypto/idea/*.d crypto/idea/*.obj crypto/idea/lib crypto/idea/tags crypto/idea/core crypto/idea/.pure crypto/idea/.nfs* crypto/idea/*.old crypto/idea/*.bak crypto/idea/fluff
 
 .c.o:
 	$(CC) $(CFLAGS_crypto_idea) $(CPPFLAGS) -c -o $@ $<
