--- a/crypto/srp/Makefile
+++ b/crypto/srp/Makefile
@@ -59,7 +59,7 @@ dclean_crypto_srp:
 
 clean: clean_crypto_srp
 clean_crypto_srp:
-	rm -f crypto/srp/*.o crypto/srp/*.d crypto/srp/*.obj crypto/srp/lib tags crypto/srp/core crypto/srp/.pure crypto/srp/.nfs* crypto/srp/*.old crypto/srp/*.bak crypto/srp/fluff
+	rm -f crypto/srp/*.o crypto/srp/*.d crypto/srp/*.obj crypto/srp/lib crypto/srp/tags crypto/srp/core crypto/srp/.pure crypto/srp/.nfs* crypto/srp/*.old crypto/srp/*.bak crypto/srp/fluff
 
 .c.o:
 	$(CC) $(CFLAGS_crypto_srp) $(CPPFLAGS) -c -o $@ $<
