--- a/crypto/whrlpool/Makefile
+++ b/crypto/whrlpool/Makefile
@@ -77,7 +77,7 @@ dclean_crypto_whrlpool:
 
 clean: clean_crypto_whrlpool
 clean_crypto_whrlpool:
-	rm -f crypto/whrlpool/*.s crypto/whrlpool/*.o crypto/whrlpool/*.d crypto/whrlpool/*.obj crypto/whrlpool/lib tags crypto/whrlpool/core crypto/whrlpool/.pure crypto/whrlpool/.nfs* crypto/whrlpool/*.old crypto/whrlpool/*.bak crypto/whrlpool/fluff
+	rm -f crypto/whrlpool/*.s crypto/whrlpool/*.o crypto/whrlpool/*.d crypto/whrlpool/*.obj crypto/whrlpool/lib crypto/whrlpool/tags crypto/whrlpool/core crypto/whrlpool/.pure crypto/whrlpool/.nfs* crypto/whrlpool/*.old crypto/whrlpool/*.bak crypto/whrlpool/fluff
 
 .S.s:
 	$(CPP_crypto_whrlpool) $(CPPFLAGS) -o $@ $<
