--- a/fips/utl/Makefile
+++ b/fips/utl/Makefile
@@ -58,7 +58,7 @@ dclean_fips_utl:
 
 clean: clean_fips_utl
 clean_fips_utl:
-	rm -f fips/utl/*.o fips/utl/*.d fips/utl/*.obj fips/utl/lib tags fips/utl/core fips/utl/.pure fips/utl/.nfs* fips/utl/*.old fips/utl/*.bak fips/utl/fluff
+	rm -f fips/utl/*.o fips/utl/*.d fips/utl/*.obj fips/utl/lib fips/utl/tags fips/utl/core fips/utl/.pure fips/utl/.nfs* fips/utl/*.old fips/utl/*.bak fips/utl/fluff
 
 .c.o:
 	$(CC) $(CFLAGS_fips_utl) $(CPPFLAGS) -c -o $@ $<
