--- a/crypto/asn1/Makefile
+++ b/crypto/asn1/Makefile
@@ -100,7 +100,7 @@ dclean_crypto_asn1:
 
 clean: clean_crypto_asn1
 clean_crypto_asn1:
-	rm -f crypto/asn1/*.o crypto/asn1/*.d crypto/asn1/*.obj crypto/asn1/lib tags crypto/asn1/core crypto/asn1/.pure crypto/asn1/.nfs* crypto/asn1/*.old crypto/asn1/*.bak crypto/asn1/fluff
+	rm -f crypto/asn1/*.o crypto/asn1/*.d crypto/asn1/*.obj crypto/asn1/lib crypto/asn1/tags crypto/asn1/core crypto/asn1/.pure crypto/asn1/.nfs* crypto/asn1/*.old crypto/asn1/*.bak crypto/asn1/fluff
 
 
 .c.o:
