--- a/crypto/bn/Makefile
+++ b/crypto/bn/Makefile
@@ -178,7 +178,7 @@ dclean_crypto_bn:
 
 clean: clean_crypto_bn
 clean_crypto_bn:
-	rm -f crypto/bn/*.s crypto/bn/*.o crypto/bn/*.d crypto/bn/*.obj crypto/bn/lib tags crypto/bn/core crypto/bn/.pure crypto/bn/.nfs* crypto/bn/*.old crypto/bn/*.bak crypto/bn/fluff
+	rm -f crypto/bn/*.s crypto/bn/*.o crypto/bn/*.d crypto/bn/*.obj crypto/bn/lib crypto/bn/tags crypto/bn/core crypto/bn/.pure crypto/bn/.nfs* crypto/bn/*.old crypto/bn/*.bak crypto/bn/fluff
 
 .S.s:
 	$(CPP_crypto_bn) $(CPPFLAGS) -o $@ $<
