--- a/crypto/cmac/Makefile
+++ b/crypto/cmac/Makefile
@@ -65,7 +65,7 @@ dclean_crypto_cmac:
 
 clean: clean_crypto_cmac
 clean_crypto_cmac:
-	rm -f crypto/cmac/*.o crypto/cmac/*.d crypto/cmac/*.obj crypto/cmac/lib tags crypto/cmac/core crypto/cmac/.pure crypto/cmac/.nfs* crypto/cmac/*.old crypto/cmac/*.bak crypto/cmac/fluff
+	rm -f crypto/cmac/*.o crypto/cmac/*.d crypto/cmac/*.obj crypto/cmac/lib crypto/cmac/tags crypto/cmac/core crypto/cmac/.pure crypto/cmac/.nfs* crypto/cmac/*.old crypto/cmac/*.bak crypto/cmac/fluff
 
 .c.o:
 	$(CC) $(CFLAGS_crypto_cmac) $(CPPFLAGS) -c -o $@ $<
