--- a/crypto/des/Makefile
+++ b/crypto/des/Makefile
@@ -99,7 +99,7 @@ dclean_crypto_des:
 
 clean: clean_crypto_des
 clean_crypto_des:
-	rm -f crypto/des/*.s crypto/des/*.o crypto/des/*.d crypto/des/*.obj crypto/des/des crypto/des/lib tags crypto/des/core crypto/des/.pure crypto/des/.nfs* crypto/des/*.old crypto/des/*.bak crypto/des/fluff
+	rm -f crypto/des/*.s crypto/des/*.o crypto/des/*.d crypto/des/*.obj crypto/des/des crypto/des/lib crypto/des/tags crypto/des/core crypto/des/.pure crypto/des/.nfs* crypto/des/*.old crypto/des/*.bak crypto/des/fluff
 
 .S.s:
 	$(CPP_crypto_des) $(CPPFLAGS) -o $@ $<
