--- a/crypto/dso/Makefile
+++ b/crypto/dso/Makefile
@@ -67,7 +67,7 @@ dclean_crypto_dso:
 
 clean: clean_crypto_dso
 clean_crypto_dso:
-	rm -f crypto/dso/*.o crypto/dso/*.d */*.o */*.d crypto/dso/*.obj crypto/dso/lib tags crypto/dso/core crypto/dso/.pure crypto/dso/.nfs* crypto/dso/*.old crypto/dso/*.bak crypto/dso/fluff
+	rm -f crypto/dso/*.o crypto/dso/*.d */*.o */*.d crypto/dso/*.obj crypto/dso/lib crypto/dso/tags crypto/dso/core crypto/dso/.pure crypto/dso/.nfs* crypto/dso/*.old crypto/dso/*.bak crypto/dso/fluff
 
 .c.o:
 	$(CC) $(CFLAGS_crypto_dso) $(CPPFLAGS) -c -o $@ $<
