--- a/crypto/ecdh/Makefile
+++ b/crypto/ecdh/Makefile
@@ -66,7 +66,7 @@ dclean_crypto_ecdh:
 
 clean: clean_crypto_ecdh
 clean_crypto_ecdh:
-	rm -f crypto/ecdh/*.o crypto/ecdh/*.d */*.o */*.d crypto/ecdh/*.obj crypto/ecdh/lib tags crypto/ecdh/core crypto/ecdh/.pure crypto/ecdh/.nfs* crypto/ecdh/*.old crypto/ecdh/*.bak crypto/ecdh/fluff
+	rm -f crypto/ecdh/*.o crypto/ecdh/*.d */*.o */*.d crypto/ecdh/*.obj crypto/ecdh/lib crypto/ecdh/tags crypto/ecdh/core crypto/ecdh/.pure crypto/ecdh/.nfs* crypto/ecdh/*.old crypto/ecdh/*.bak crypto/ecdh/fluff
 
 .c.o:
 	$(CC) $(CFLAGS_crypto_ecdh) $(CPPFLAGS) -c -o $@ $<
