--- a/crypto/lhash/Makefile
+++ b/crypto/lhash/Makefile
@@ -65,7 +65,7 @@ dclean_crypto_lhash:
 
 clean: clean_crypto_lhash
 clean_crypto_lhash:
-	rm -f crypto/lhash/*.o crypto/lhash/*.d crypto/lhash/*.obj crypto/lhash/lib tags crypto/lhash/core crypto/lhash/.pure crypto/lhash/.nfs* crypto/lhash/*.old crypto/lhash/*.bak crypto/lhash/fluff
+	rm -f crypto/lhash/*.o crypto/lhash/*.d crypto/lhash/*.obj crypto/lhash/lib crypto/lhash/tags crypto/lhash/core crypto/lhash/.pure crypto/lhash/.nfs* crypto/lhash/*.old crypto/lhash/*.bak crypto/lhash/fluff
 
 .c.o:
 	$(CC) $(CFLAGS_crypto_lhash) $(CPPFLAGS) -c -o $@ $<
