--- a/crypto/ocsp/Makefile
+++ b/crypto/ocsp/Makefile
@@ -68,7 +68,7 @@ dclean_crypto_ocsp:
 
 clean: clean_crypto_ocsp
 clean_crypto_ocsp:
-	rm -f crypto/ocsp/*.o crypto/ocsp/*.d crypto/ocsp/*.obj crypto/ocsp/lib tags crypto/ocsp/core crypto/ocsp/.pure crypto/ocsp/.nfs* crypto/ocsp/*.old crypto/ocsp/*.bak crypto/ocsp/fluff
+	rm -f crypto/ocsp/*.o crypto/ocsp/*.d crypto/ocsp/*.obj crypto/ocsp/lib crypto/ocsp/tags crypto/ocsp/core crypto/ocsp/.pure crypto/ocsp/.nfs* crypto/ocsp/*.old crypto/ocsp/*.bak crypto/ocsp/fluff
 
 .c.o:
 	$(CC) $(CFLAGS_crypto_ocsp) $(CPPFLAGS) -c -o $@ $<
