--- a/crypto/rc4/Makefile
+++ b/crypto/rc4/Makefile
@@ -93,7 +93,7 @@ dclean_crypto_rc4:
 
 clean: clean_crypto_rc4
 clean_crypto_rc4:
-	rm -f crypto/rc4/*.s crypto/rc4/*.o crypto/rc4/*.d crypto/rc4/*.obj crypto/rc4/lib tags crypto/rc4/core crypto/rc4/.pure crypto/rc4/.nfs* crypto/rc4/*.old crypto/rc4/*.bak crypto/rc4/fluff
+	rm -f crypto/rc4/*.s crypto/rc4/*.o crypto/rc4/*.d crypto/rc4/*.obj crypto/rc4/lib crypto/rc4/tags crypto/rc4/core crypto/rc4/.pure crypto/rc4/.nfs* crypto/rc4/*.old crypto/rc4/*.bak crypto/rc4/fluff
 
 .S.s:
 	$(CPP_crypto_rc4) $(CPPFLAGS) -o $@ $<
