--- a/engines/Makefile
+++ b/engines/Makefile
@@ -142,7 +142,7 @@ dclean_engines:
 
 clean: clean_engines
 clean_engines:
-	rm -f engines/*.o engines/*.d engines/*.obj engines/lib tags engines/core engines/.pure engines/.nfs* engines/*.old engines/*.bak engines/fluff
+	rm -f engines/*.o engines/*.d engines/*.obj engines/lib engines/tags engines/core engines/.pure engines/.nfs* engines/*.old engines/*.bak engines/fluff
 
 .c.o:
 	$(CC) $(CFLAGS_engines) $(CPPFLAGS) -c -o $@ $<
