--- a/fips/dsa/Makefile
+++ b/fips/dsa/Makefile
@@ -76,7 +76,7 @@ dclean_fips_dsa:
 
 clean: clean_fips_dsa
 clean_fips_dsa:
-	rm -f fips/dsa/*.o fips/dsa/*.d fips/dsa/*.obj fips/dsa/lib tags fips/dsa/core fips/dsa/.pure fips/dsa/.nfs* fips/dsa/*.old fips/dsa/*.bak fips/dsa/fluff
+	rm -f fips/dsa/*.o fips/dsa/*.d fips/dsa/*.obj fips/dsa/lib fips/dsa/tags fips/dsa/core fips/dsa/.pure fips/dsa/.nfs* fips/dsa/*.old fips/dsa/*.bak fips/dsa/fluff
 
 .c.o:
 	$(CC) $(CFLAGS_fips_dsa) $(CPPFLAGS) -c -o $@ $<
