--- a/fips/sha/Makefile
+++ b/fips/sha/Makefile
@@ -96,7 +96,7 @@ dclean_fips_sha:
 
 clean: clean_fips_sha
 clean_fips_sha:
-	rm -f fips/sha/*.o fips/sha/*.d asm/*.o fips/sha/*.obj fips/sha/lib tags fips/sha/core fips/sha/.pure fips/sha/.nfs* fips/sha/*.old fips/sha/*.bak fips/sha/fluff $(EXE_fips_sha)
+	rm -f fips/sha/*.o fips/sha/*.d asm/*.o fips/sha/*.obj fips/sha/lib fips/sha/tags fips/sha/core fips/sha/.pure fips/sha/.nfs* fips/sha/*.old fips/sha/*.bak fips/sha/fluff $(EXE_fips_sha)
 
 .c.o:
 	$(CC) $(CFLAGS_fips_sha) $(CPPFLAGS) -c -o $@ $<
