Update rehash dependency for single-Makefile

--- a/apps/Makefile
+++ b/apps/Makefile
@@ -140,10 +140,9 @@ $(EXE_apps): apps/progs.h $(E_OBJ) $(PROGRAM).o $(DLIBCRYPTO_apps) $(DLIBSSL_app
 	fi; \
 	LIBRARIES="$(LIBSSL_apps) $(LIBKRB5) $(LIBCRYPTO_apps)" ; \
 	cat configure.mk Makefile.shared | $(MAKE) -f - \
-		APPNAME=$(EXE_apps) OBJECTS=apps/"$(PROGRAM).o $(E_OBJ)" \
+		APPNAME=$(EXE_apps) OBJECTS="$(PROGRAM).o $(E_OBJ)" \
 		LIBDEPS="$(PEX_LIBS) $$LIBRARIES $(EX_LIBS)" \
 		link_app.$${shlib_target}
-	@(cd apps/..; $(MAKE) rehash)
 
 apps/progs.h: apps/progs.pl
 	$(PERL) apps/progs.pl $(E_EXE) >apps/progs.h
