--- a/crypto/Makefile
+++ b/crypto/Makefile
@@ -78,7 +78,8 @@ links_crypto:
 	@$(PERL) util/mklink.pl ./apps $(APPS)
 
 $(LIB_crypto): $(LIBOBJ_crypto)
-	$(ARX) $(LIB_crypto) $(LIBOBJ_crypto) $(LIBOBJ_subdirs)
+	$(ARX) $(LIB_crypto) $(LIBOBJ_crypto) $(LIBOBJ_subdirs) \
+	$(LIBOBJ_engines) $(LIBOBJ_engdirs)
 	$(RANLIB) $(LIB_crypto) || echo Never mind.
 
 shared: shared_crypto
